--- a/src/Components/Logo/Logo.scss
+++ b/src/Components/Logo/Logo.scss
@@ -8,15 +8,13 @@
   width: 100%;
 }
 
+.logo__link {
+  display: inline-block;
+}
+
 .logo__image {
   width: 100%;
   height: auto;
-}
-
-@media(max-width: 650px) {
-  .logo__wrapper {
-    top: $websitePaddingTop34;
-  }
 }
 
 @media(max-width: $burgerMenuWidth) {
@@ -27,5 +25,15 @@
 
   .logo__image {
     width: 100%;
+  }
+}
+
+@media(max-width: 650px) {
+  .logo__wrapper {
+    top: $websitePaddingTop34;
+  }
+
+  .logo__image {
+    height: 40px;
   }
 }
